--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -1,130 +1,91 @@
-name: Fetch, Compare & Cleanup Images
+name: Cleanup Old Images
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
 
 jobs:
-  fetch_and_cleanup:
-    runs-on: [self-hosted, Linux, X64]  # Self-hosted runner
+  cleanup:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Fetch Images from GitHub Packages
-        env:
-          GITHUB_USER: "mishragulshan999"
-          TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+      - name: Set up jq (for JSON processing)
+        run: sudo apt-get install -y jq
+
+      - name: Fetch Deployed Images from Kubernetes
         run: |
-          echo "Fetching images from GitHub..."
+          DEPLOYED_IMAGES=$(kubectl get pods -A -o json | jq -r '.items[].spec.containers[].image' | sort -u)
+          echo "$DEPLOYED_IMAGES" > deployed_images.txt
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
 
-          # Fetch container images (Auto-detect User/Org)
+      - name: Fetch Image List from GitHub Packages
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: "pavanbandaru"
+        run: |
+          OUTPUT="["
+
+          # Read Deployed Images from File
+          DEPLOYED_IMAGES=$(cat deployed_images.txt)
+
+          # Get the list of all container images in GitHub Packages
           IMAGES=$(curl -s -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/users/$GITHUB_USER/packages?package_type=container" \
-            | jq -r '.[] | {image: .name, url: .html_url}')
+            "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
+            | jq -r '.[] | {image: .name}')
 
-          if [ -z "$IMAGES" ] || [ "$IMAGES" == "null" ]; then
-            echo "Trying organization API instead..."
-            IMAGES=$(curl -s -L \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              "https://api.github.com/orgs/$GITHUB_USER/packages?package_type=container" \
-              | jq -r '.[] | {image: .name, url: .html_url}')
-          fi
-
-          if [ -z "$IMAGES" ] || [ "$IMAGES" == "null" ]; then
-            echo "❌ ERROR: No images found! Check GitHub username or API permissions."
-            exit 1
-          fi
-
-          echo "IMAGES=$IMAGES" >> $GITHUB_ENV
-
-      - name: Fetch Deployed Images from Kubernetes
-        run: |
-          echo "Fetching deployed images from Kubernetes..."
-          DEPLOYED_IMAGES=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' \
-            | tr ' ' '\n' | sort -u)
-
-          echo "DEPLOYED_IMAGES=$DEPLOYED_IMAGES" >> $GITHUB_ENV
-
-      - name: Compare & Cleanup Old Images
-        env:
-          GITHUB_USER: "mishragulshan999"
-          TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-        run: |
-          OUTPUT="["
           for row in $(echo "$IMAGES" | jq -c '.'); do
               IMAGE_NAME=$(echo "$row" | jq -r '.image')
-              echo "Processing image: $IMAGE_NAME"
 
-              # Fetch image versions
+              # Fetch GitHub tags for each image
               GITHUB_TAGS=$(curl -s -L \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
-                "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions" \
-                | jq -r '.[].metadata.container.tags[]' | sort -V)
+                "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
+                | jq -r '.[].metadata.container.tags' | jq -r '.[]' | sort -V)
 
-              if [ -z "$GITHUB_TAGS" ]; then
-                echo "No tags found for $IMAGE_NAME, skipping..."
-                continue
-              fi
+              TAGS_ARRAY=($GITHUB_TAGS)
+              TAG_COUNT=${#TAGS_ARRAY[@]}
 
-              # Preserve last 5 versions
-              LAST_5_VERSIONS=$(echo "$GITHUB_TAGS" | tail -n 5)
+              for ((i=0; i<TAG_COUNT; i++)); do
+                  TAG="${TAGS_ARRAY[$i]}"
+                  IMAGE_TAG="$IMAGE_NAME:$TAG"
 
-              for tag in $GITHUB_TAGS; do
-                  if echo "$DEPLOYED_IMAGES" | grep -q "$IMAGE_NAME:$tag"; then
+                  if echo "$DEPLOYED_IMAGES" | grep -q "$IMAGE_TAG"; then
                       STATUS="Deployed"
                       DELETE="No"
-                      REASON="Deployed on Kubernetes"
+                      REASON="Deployed on K8s"
+                  elif (( i >= TAG_COUNT - 5 )); then
+                      STATUS="NOT Deployed"
+                      DELETE="No"
+                      REASON="Reserved (Last 5)"
                   else
                       STATUS="NOT Deployed"
-                      if echo "$LAST_5_VERSIONS" | grep -q "$tag"; then
-                          DELETE="No"
-                          REASON="Reserved (Last 5 Versions)"
-                      else
-                          DELETE="Yes"
-                          REASON="Old Version"
-                      fi
-                  fi
+                      DELETE="Yes"
+                      REASON="Old Image, Safe to Delete"
 
-                  OUTPUT="$OUTPUT{\"Image\":\"$IMAGE_NAME\",\"Tag\":\"$tag\",\"Status\":\"$STATUS\",\"Delete\":\"$DELETE\",\"Reason\":\"$REASON\"},"
-              done
-
-              # Cleanup Old Versions
-              for tag in $GITHUB_TAGS; do
-                  if echo "$LAST_5_VERSIONS" | grep -q "$tag"; then
-                      echo "Skipping preserved tag: $IMAGE_NAME:$tag"
-                      continue
-                  elif echo "$DEPLOYED_IMAGES" | grep -q "$IMAGE_NAME:$tag"; then
-                      echo "Skipping deployed tag: $IMAGE_NAME:$tag"
-                      continue
-                  else
-                      echo "Deleting old tag: $IMAGE_NAME:$tag"
-                      VERSION_ID=$(curl -s -L \
+                      # Delete Image
+                      DELETE_RESPONSE=$(curl -X DELETE -s -L \
                           -H "Accept: application/vnd.github+json" \
                           -H "Authorization: Bearer $TOKEN" \
                           -H "X-GitHub-Api-Version: 2022-11-28" \
-                          "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions" \
-                          | jq -r ".[] | select(.metadata.container.tags[] == \"$tag\") | .id")
+                          "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions/$TAG")
 
-                      if [ -n "$VERSION_ID" ]; then
-                          curl -X DELETE -L \
-                              -H "Accept: application/vnd.github+json" \
-                              -H "Authorization: Bearer $TOKEN" \
-                              -H "X-GitHub-Api-Version: 2022-11-28" \
-                              "https://api.github.com/users/$GITHUB_USER/packages/container/$IMAGE_NAME/versions/$VERSION_ID"
-                          echo "Deleted $IMAGE_NAME:$tag"
+                      if [[ $? -eq 0 ]]; then
+                          REASON="Deleted Successfully"
+                      else
+                          REASON="Failed to Delete"
                       fi
                   fi
+
+                  # Add to JSON Output
+                  OUTPUT="$OUTPUT{\"Image\":\"$IMAGE_NAME\",\"Tag\":\"$TAG\",\"Status\":\"$STATUS\",\"Delete\":\"$DELETE\",\"Reason\":\"$REASON\"},"
               done
           done
 
@@ -132,7 +93,7 @@ jobs:
           echo "$OUTPUT" > output.json
           echo "JSON output written to output.json"
 
-      - name: Upload JSON Output as Artifact
+      - name: Upload JSON to Artifact
         uses: actions/upload-artifact@v3
         with:
           name: output-json
